# sre-alert-testing

./: .env.example  .gitignore  LICENSE  README.md
.github/workflows/: backend-tests.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config_models.py  main.py  metrics.py  randomness.py  schemas.py  settings.py
backend/app/routers/: health.py  simulated.py  stats.py
backend/config/: endpoints.yaml
backend/tests/: conftest.py  helpers.py  test_config.py  test_health.py  test_metrics.py  test_simulated_endpoints.py
docs/: deployment.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
